# BrainSafe

./: README.md
.github/: copilot-instructions.md
backend/: README.md  db.sqlite3  manage.py  pyproject.toml
backend/baby_shield_backend/: ai.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
extension/: README.md  manifest.json
extension/src/: background.js  content.js  popup.html  popup.js  styles.css
shieldagent/shield_agent/: agent.py  requirements.txt
